package pattern.structural.adapter;

/**
 * Interfaz objetivo
 */
public interface MetricTemperatureSystem {
    double getTemperature();

    void setTemperature(double temperature);
}
